<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_home"
            android:title="@string/home" />
        <item
            android:id="@+id/menu_about_us"
            android:title="@string/aboutus" />
        <item
            android:id="@+id/menu_contributor"
            android:title="@string/our_team" />
        <item
            android:id="@+id/menu_help_us"
            android:title="@string/help_us" />
        <item
            android:id="@+id/menu_downloads"
            android:title="@string/downloads" />
        <item
            android:id="@+id/menu_comments"
            android:title="@string/comments" />

        <item android:id="@+id/menu_settings"
            android:title="@string/action_settings"/>
    </group>
</menu>
