<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:tag="Contacts">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/name_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:baselineAligned="false"
                android:weightSum="2">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/txt_fname_layer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <EditText
                        android:id="@+id/edt_fname"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/firstname"
                        android:imeOptions="actionNext"
                        android:inputType="text"
                        android:padding="8dp"
                        android:singleLine="true"
                        android:textColor="@color/primary_text"
                        android:textColorHint="@color/secondary_text"
                        android:textSize="16sp" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/txt_lname_layer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <EditText
                        android:id="@+id/edt_lname"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/lastname"
                        android:imeOptions="actionNext"
                        android:inputType="text"
                        android:padding="8dp"
                        android:singleLine="true"
                        android:textColor="@color/primary_text"
                        android:textColorHint="@color/secondary_text"
                        android:textSize="16sp" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/txt_mail_layer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/name_field">

                <EditText
                    android:id="@+id/edt_mail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/your_email"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:padding="8dp"
                    android:textColor="@color/primary_text"
                    android:textColorHint="@color/secondary_text"
                    android:textSize="16sp" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/txt_comments_layer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt_mail_layer">

                <EditText
                    android:id="@+id/edt_message"
                    android:layout_width="match_parent"
                    android:layout_height="140dp"
                    android:layout_marginTop="10dp"
                    android:ems="10"
                    android:gravity="top"
                    android:hint="@string/your_message"
                    android:imeOptions="actionDone"
                    android:inputType="textMultiLine"
                    android:padding="8dp"
                    android:textColor="@color/primary_text"
                    android:textColorHint="@color/secondary_text"
                    android:textSize="16sp" />
            </android.support.design.widget.TextInputLayout>


            <!--            <LinearLayout
                            android:id="@+id/submit_field"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/txt_comments_layer"
                            android:layout_marginBottom="10dp"
                            android:layout_marginTop="10dp"
                            android:gravity="end"
                            android:orientation="horizontal">

                            <Button
                                android:id="@+id/btn_submit"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:background="@drawable/button_selector"
                                android:paddingBottom="7dp"
                                android:paddingLeft="20dp"
                                android:paddingRight="20dp"
                                android:paddingTop="7dp"
                                android:text="@string/submit"
                                android:textColor="@color/white_color"
                                android:textSize="16sp"
                                android:textStyle="bold" />
                        </LinearLayout>-->
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>