<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="110dp"
    android:background="@android:color/white"
    android:gravity="center">

    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        card_view:attachToRoot="true"
        card_view:cardCornerRadius="2dp"
        card_view:contentPadding="10dp">

        <RelativeLayout
            android:id="@+id/rl_item_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?android:attr/selectableItemBackground">

            <RelativeLayout
                android:id="@+id/thumbnail"
                android:layout_width="80dp"
                android:layout_height="100dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true">

                <ImageView
                    android:id="@+id/iv_book_image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/app_name"
                    android:padding="3dp"
                    android:scaleType="centerCrop" />
            </RelativeLayout>

            <TextView
                android:id="@+id/txt_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:layout_toEndOf="@+id/thumbnail"
                android:layout_toLeftOf="@+id/iv_favourite"
                android:layout_toRightOf="@+id/thumbnail"
                android:layout_toStartOf="@+id/iv_favourite"
                android:ellipsize="end"
                android:maxLines="2"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                android:textStyle="normal" />

            <ImageView
                android:id="@+id/iv_favourite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:contentDescription="@string/app_name"
                android:padding="5dp"
                android:src="@drawable/favourite_selector"
                android:visibility="gone" />

            <TextView
                android:id="@+id/txt_author"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txt_title"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:layout_toEndOf="@+id/thumbnail"
                android:layout_toRightOf="@+id/thumbnail"
                android:ellipsize="end"
                android:maxLines="1"
                android:textColor="@android:color/black"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/txt_open"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_toEndOf="@+id/thumbnail"
                android:layout_toRightOf="@+id/thumbnail"
                android:drawableLeft="@drawable/ic_read_book"
                android:drawablePadding="5dp"
                android:drawableStart="@drawable/ic_read_book"
                android:gravity="center"
                android:padding="5dp"
                android:visibility="invisible"
                android:text="@string/open"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/txt_download"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:drawableLeft="@drawable/ic_download"
                android:drawablePadding="5dp"
                android:drawableStart="@drawable/ic_download"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/download"
                android:textColor="@android:color/black" />

        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <!--
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/thumbnail"
            android:layout_alignEnd="@+id/txt_author"
            android:layout_alignRight="@+id/txt_author">

            <ImageView
                android:id="@+id/iv_favourite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/app_name"
                android:src="@drawable/favourite_selector" />
        </RelativeLayout>
    -->
</RelativeLayout>
